--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ norfair = {git = "https://github.com/tryolabs/norfair.git", rev = "master"}
 torch = "^1.12.1"
 opencv-python = "^4.6.0.66"
 numpy = "^1.23.4"
-Pillow = "^9.2.0"
+Pillow = "10.0.1"
 matplotlib = "^3.6.1"
 pandas = "^1.5.0"
 torchvision = "^0.13.1"
